fix overlap

--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ html, body {
 }
 .name {
  text-align: center;
- line-height: 0;
+ margin-bottom: 1px;
+ margin-top: 1px;
 }
 
 
